--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -21,6 +21,10 @@ jobs:
 
       - name: Build
         run: hugo --minify
-
-      - name: deploy to server
-        run: rsync -r --quiet --delete-after ./public/* ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.SERVER_DESTINATION }}
+        
+      - name: rsync deployments
+        uses: contention/rsync-deployments@v1.0.0
+        env: 
+          DEPLOY_KEY: ${{secrets.DEPLOY_KEY}} 
+        with: 
+          args: "-avzr --delete --exclude .htaccess --exclude /node_modules/ ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.SERVER_DESTINATION }}
