--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -27,4 +27,4 @@ jobs:
         env: 
           DEPLOY_KEY: ${{secrets.DEPLOY_KEY}} 
         with: 
-          args: "-avzr --delete /public/* ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.SERVER_DESTINATION }}"
+          args: "-avzr --delete ./public/ ${{ secrets.USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.SERVER_DESTINATION }}"
