--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/checkout@v1  # v2 does not have submodules option now
         # with:
         #   submodules: true
+          
+      - name: Install npm dependencies
+        run: npm i
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -21,6 +24,9 @@ jobs:
 
       - name: Build
         run: hugo --minify
+        
+      - name: Listing files
+        run: ls
         
       - name: rsync deployments
         uses: contention/rsync-deployments@v1.0.0
