--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: SSH setup
         env:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
-          KNOWN_HOSTS: ${{ secrets.SERVER_IP }}
+          KNOWN_HOSTS: ${{ secrets.KNOWN_HOSTS }}
         run: |
           mkdir -p ~/.ssh
           echo "${KNOWN_HOSTS}" >> ~/.ssh/known_hosts
