--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,4 @@ title = "Résiste !"
 disableKinds = ["taxonomy", "taxonomyTerm", "RSS"]
 
 [params]
-    description = "Le jeu coopératif pour résister ensemble et défendre la démocratie ! Une manière ludique et coopérative d’aborder la politique, la démocratie et la résistance à partir de 9 ans."
+    description = "Le jeu coopératif pour résister ensemble et défendre la démocratie ! Une manière ludique et coopérative d’aborder le système politique belge, la démocratie et la résistance à partir de 9 ans."
